# music-shop

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  app.py  config.py  docker-compose.prod.yml  docker-compose.yml  init_db.py  models.py  requirements.txt
dify/volumes/plugin_daemon/cwd/langgenius/minimax-0.0.15@04198f577cae6ba0b4624d2715edc9c93fd775a47ee16bcbc2825230eed8c56a/: .difyignore  manifest.yaml  pyproject.toml  requirements.txt
dify/volumes/plugin_daemon/cwd/langgenius/minimax-0.0.15@04198f577cae6ba0b4624d2715edc9c93fd775a47ee16bcbc2825230eed8c56a/models/llm/: _position.yaml  chat_completion.py  chat_completion_pro.py  chat_completion_v2.py  llm.py  minimax-m1.yaml  minimax-m2-her.yaml  minimax-m2.1-lightning.yaml  minimax-m2.1.yaml  minimax-m2.5-lightning.yaml  minimax-m2.5.yaml  minimax-m2.7-highspeed.yaml  minimax-m2.7.yaml  minimax-m2.yaml  types.py
dify/volumes/plugin_daemon/cwd/langgenius/minimax-0.0.15@04198f577cae6ba0b4624d2715edc9c93fd775a47ee16bcbc2825230eed8c56a/provider/: minimax.py  minimax.yaml
dify/volumes/plugin_daemon/cwd/langgenius/minimax-0.0.15@04198f577cae6ba0b4624d2715edc9c93fd775a47ee16bcbc2825230eed8c56a/tests/: test_llm_call.py
dify/volumes/plugin_daemon/cwd/langgenius/siliconflow-0.0.49@2b16560fadbd65f7f9595a377fe74f86406c32f467e2dd8489232cc1d43c7391/: .verification.dify.json  manifest.yaml  pyproject.toml  requirements.txt
dify/volumes/plugin_daemon/cwd/langgenius/siliconflow-0.0.49@2b16560fadbd65f7f9595a377fe74f86406c32f467e2dd8489232cc1d43c7391/provider/: siliconflow.py  siliconflow.yaml
nginx/: nginx.conf
(+1272 files in other folders)
